--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
+    "@clerk/themes": "^1.7.5",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.5.0",
+    "all": "^0.0.0",
     "autoprefixer": "10.4.15",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
