--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "typescript": "5.2.2",
     "uploadthing": "^5.5.0",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
